Added artifact collection upon failure

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -26,7 +26,6 @@ blocks:
           - bots/image-customize -v -r "usermod -u 981 tlog || true" $TEST_OS
           - bots/image-customize -v -u ./test/files/1.journal:/var/log/journal/1.journal $TEST_OS
           - test/check-application -v
-
       - name: Check centos-8
         commands:
           - export TEST_OS=centos-8-stream
@@ -34,3 +33,7 @@ blocks:
           - bots/image-customize -v -r "usermod -u 981 tlog || true" $TEST_OS
           - bots/image-customize -v -u ./test/files/1.journal:/var/log/journal/1.journal $TEST_OS
           - test/check-application -v
+      epilogue:
+        on_fail:
+          commands:
+            - artifact push job .
