--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "@patternfly/patternfly": "2.71.6",
-    "@patternfly/react-core": "3.158.3",
-    "bootstrap-datetime-picker": "2.4.4",
-    "bootstrap-slider": "11.0.2",
+    "@patternfly/patternfly": "^4.16.7",
+    "@patternfly/react-core": "^4.23.1",
+    "@patternfly/react-table": "^4.8.6",
+    "comment-json": "^1.1.3",
     "core-js": "3.6.5",
+    "ini": "^1.3.5",
     "jquery": "3.5.1",
     "moment": "2.27.0",
     "mustache": "2.3.0",
