Throttle journalctl restarts
This addresses an issue with typeahead search generating a significant
load on the system, a single filter test run can make ~100 calls to
journalctl restart if not throttled.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "raw-loader": "^0.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "throttle-debounce": "2.3.0",
     "xterm": "^3.14.5"
   }
 }
