TESTS: Enable files provider

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,6 +28,9 @@ blocks:
           - bots/image-customize -v -r "usermod -u 981 tlog || true" $TEST_OS
           - bots/image-customize -v -u ./test/files/1.journal:/var/log/journal/1.journal $TEST_OS
           - bots/image-customize -v -u ./test/files/binary-rec.journal:/var/log/journal/binary-rec.journal $TEST_OS
+          - bots/image-customize -v -u ./test/files/sssd.conf:/etc/sssd/sssd.conf $(TEST_OS)
+          - bots/image-customize -v -r "chmod 600 /etc/sssd/sssd.conf || true" $(TEST_OS)
+          - bots/image-customize -v -r "chown root:root /etc/sssd/sssd.conf" $(TEST_OS)
           - test/check-application -v
       - name: Check centos-8
         commands:
