--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -14,6 +14,7 @@ blocks:
           - sudo rm -rf /etc/localtime
           - sudo ln -s /usr/share/zoneinfo/America/New_York /etc/localtime
           - sudo apt install -y python3-libvirt
+          - sudo apt update -y
           - docker build -t rpmbuilder .
           - id=$(docker create rpmbuilder)
           - docker cp $id:/cockpit-session-recording/ .
@@ -23,7 +24,7 @@ blocks:
       jobs:
       - name: Check fedora-34
         commands:
-          - export TEST_OS=fedora-34
+          - export TEST_OS=fedora-35
           - bots/image-customize -v -i cockpit-ws -i cockpit-packagekit -i `pwd`/cockpit-session-recording*.noarch.rpm -s `pwd`/test/vm.install $TEST_OS
           - bots/image-customize -v -r "usermod -u 981 tlog || true" $TEST_OS
           - bots/image-customize -v -u ./test/files/1.journal:/var/log/journal/1.journal $TEST_OS
