--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "htmlparser": "^1.7.7",
     "jed": "^1.1.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
+    "sass": "^1.35.1",
     "po2json": "^1.0.0-alpha",
     "sass-loader": "^7.0.3",
     "sizzle": "^2.3.3",
