--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "stylelint-formatter-pretty": "^3.2.0"
   },
   "dependencies": {
-"@patternfly/patternfly": "5.0.0-alpha.40",
-"@patternfly/react-core": "5.0.0-alpha.72",
+    "@patternfly/patternfly": "5.0.0-alpha.40",
+    "@patternfly/react-core": "5.0.0-alpha.72",
     "@patternfly/react-table": "^4.113.0",
+    "@patternfly/react-styles": "5.0.0-alpha.7",
+    "@patternfly/react-icons": "5.0.0-alpha.10",
     "buffer": "^6.0.3",
     "comment-json": "^4.2.3",
     "date-fns": "^2.29.3",
