--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "devDependencies": {
     "argparse": "^2.0.1",
-    "chrome-remote-interface": "^0.32.1",
-    "esbuild": "0.19.4",
-    "esbuild-plugin-copy": "^2.1.1",
-    "esbuild-plugin-replace": "^1.3.0",
+    "chrome-remote-interface": "0.33.0",
+    "esbuild": "0.19.5",
+    "esbuild-plugin-copy": "2.1.1",
+    "esbuild-plugin-replace": "1.4.0",
     "esbuild-sass-plugin": "2.16.0",
     "esbuild-wasm": "0.19.5",
     "eslint": "8.53.0",
