spec: Support SUSE specic BuildRequires

--- a/packaging/cockpit-session-recording.spec.in
+++ b/packaging/cockpit-session-recording.spec.in
@@ -9,7 +9,12 @@ Source:  https://github.com/Scribery/%{name}/releases/download/%{version}/%{name
 BuildArch: noarch
 BuildRequires: nodejs
 BuildRequires: make
+%if 0%{?suse_version}
+# Suse's package has a different name
+BuildRequires: appstream-glib
+%else
 BuildRequires: libappstream-glib
+%endif
 BuildRequires: gettext
 %if 0%{?rhel} && 0%{?rhel} <= 8
 BuildRequires: libappstream-glib-devel
