Convert to TypeScript
This needs the usual "I know the `app` element exists" annotation, plus
dealing with a non-existing /etc/hostname (in which case the watch will
return `null`, and we shouldn't poke that into a `string` state).

(cherry picked from commit 745b4ab8e8b69b25a298f9153983420d026a99ff)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,5 +45,17 @@
     "globals": {
         "require": "readonly",
         "module": "readonly"
-    }
+    },
+    "overrides": [
+    {
+      "files": ["**/*.ts", "**/*.tsx"],
+      "plugins": [
+        "@typescript-eslint"
+      ],
+      "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": ["./tsconfig.json"]
+      }
+    }]
 }
