--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "stylelint:fix": "stylelint --fix src/*{.css,scss}"
   },
   "devDependencies": {
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.16.0",
     "argparse": "2.0.1",
     "chrome-remote-interface": "0.33.2",
     "esbuild": "0.23.0",
@@ -43,7 +46,8 @@
     "stylelint-config-recommended-scss": "14.0.0",
     "stylelint-config-standard": "36.0.1",
     "stylelint-config-standard-scss": "13.1.0",
-    "stylelint-formatter-pretty": "4.0.0"
+    "stylelint-formatter-pretty": "4.0.0",
+    "typescript": "5.5.3"
   },
   "dependencies": {
     "@patternfly/patternfly": "5.3.1",
