package.json: stop providing configured extensions
In eslintrc.json we already specify the type of files we are interested
in linting and `--ext` takes presence over the configuration file and as
no js or jsx files eslint will report an error.

(cherry picked from commit 66c6f216361c8ec33f4ad036a24493b9c29716f2)

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "scripts": {
     "watch": "ESBUILD_WATCH='true' ./build.js",
     "build": "./build.js",
-    "eslint": "eslint --ext .js --ext .jsx src/",
-    "eslint:fix": "eslint --fix --ext .js --ext .jsx src/",
+    "eslint": "eslint src/",
+    "eslint:fix": "eslint --fix src/",
     "stylelint": "stylelint src/*{.css,scss}",
     "stylelint:fix": "stylelint --fix src/*{.css,scss}"
   },
