--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -32,7 +32,7 @@ updates:
     ignore:
       # https://github.com/cockpit-project/cockpit/issues/21151
       - dependency-name: "sass"
-        versions: ["1.80.x", "2.x"]
+        versions: [">=1.80.0", "2.x"]
 
       # needs to be done in Cockpit first
       - dependency-name: "@patternfly/*"
