--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,7 +4,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      # run these when most of our developers don't work, don't DoS our CI over the day
+      # run these when most of our developers don't work, don't DoS our CI in the day
       time: "22:00"
       timezone: "Europe/Berlin"
     open-pull-requests-limit: 3
