Switch to @xterm/xterm and @xterm/addon-canvas
These are the new names, and they have more recent releases

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,6 +28,9 @@ updates:
         patterns:
           - "@types*"
           - "types*"
+      xterm:
+        patterns:
+          - "@xterm*"
 
     ignore:
       # https://github.com/cockpit-project/cockpit/issues/21151
