--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "throttle-debounce": "5.0.2",
-    "xterm": "5.3.0",
-    "xterm-addon-canvas": "0.5.0"
+    "@xterm/xterm": "5.5.0",
+    "@xterm/addon-canvas": "0.7.0"
   }
 }
