--- a/packit.yaml
+++ b/packit.yaml
@@ -32,8 +32,10 @@ jobs:
   - job: tests
     trigger: pull_request
     targets:
-      - fedora-all
-      - fedora-latest-aarch64
+      - fedora-41
+      - fedora-42
+      - fedora-latest-stable-aarch64
+      - fedora-rawhide
       - centos-stream-9
       - centos-stream-9-aarch64
       - centos-stream-10
