build: Only include actually bundled npm modules into the spec
Our package.json's `dependencies` has transitive/optional dependencies
which don't actually end up in the bundle, e.g. `attr-accept`,
`file-selector`, and `js-tokens`; or `react-dropzone` which is a
`@patternfly/react-table` dependency, but not actually used in this
project.

The next commit will aggravate this further.

So make the computation of the `Provides: bundled(npm(..))` lines more
precise: Ask esbuild about which modules it actually included, which it
tells us via the "metafile". Change build.js to always output that (drop
the `--metafile` option), compute a ./runtime-npm-modules.txt list, and
use that to build the spec file.

Use runtime-npm-modules.txt as bundle stamp file to ensure that a full
build actually happened, not just a reduced one in watch mode.

Ported from https://github.com/cockpit-project/cockpit-files/commit/e15a518fddad1

(cherry picked from commit 90e239f83096101d767f14ae80a6a693958335d7)

--- a/.gitignore
+++ b/.gitignore
@@ -20,17 +20,19 @@
 /cockpit-*.tar.xz
 /cockpit-navigator.spec
 /dist/
+/metafile.json
 /package-lock.json
 /pkg/
 /node_modules/
+/runtime-npm-modules.txt
 /tmp/
 /tools/
- 
+
 # subdirs (/subdir/...)
 /packaging/arch/PKGBUILD
 /packaging/debian/changelog
 /po/*.pot
- /po/LINGUAS
+/po/LINGUAS
 /test/common/
 /test/images/
 /test/static-code
