--- a/packaging/cockpit-session-recording.spec.in
+++ b/packaging/cockpit-session-recording.spec.in
@@ -3,8 +3,9 @@ Version: %{VERSION}
 Release: 1%{?dist}
 Summary: Cockpit Session Recording
 License: LGPL-2.1-or-later
-URL:     https://github.com/Scribery/%{name}
-Source:  https://github.com/Scribery/%{name}/releases/download/%{version}/%{name}-%{version}.tar.xz
+URL :     https://github.com/Scribery/%{name}
+Source0:  https://github.com/Scribery/%{name}/releases/download/%{version}/%{name}-%{version}.tar.xz
+Source1:  https://github.com/Scribery/%{name}/releases/download/%{version}/%{name}-node-%{version}.tar.xz
 
 BuildArch: noarch
 %if ! 0%{?rhel} || 0%{?rhel} >= 10
