--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "build": "./build.js",
     "eslint": "eslint src/",
     "eslint:fix": "eslint --fix src/",
-    "stylelint": "stylelint src/*{.css,scss}",
-    "stylelint:fix": "stylelint --fix src/*{.css,scss}"
+    "stylelint": "stylelint src/*.{css,scss}",
+    "stylelint:fix": "stylelint --fix src/*.{css,scss}"
   },
   "devDependencies": {
     "@types/react": "18.3.13",
